# mcp

./: .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.base  README.md  README_CN.md  config-demo.yml  elasticsearch-fields.yml  entrypoint.sh
src/: main.rs
src/mcp/: mcp_aliyun_cli.rs  mcp_aliyun_log_cli.rs  mcp_config.rs  mcp_elasticsearch.rs  mcp_elasticsearch_fields.rs  mcp_mysql.rs  mcp_nacos.rs  mcp_redis.rs  mcp_time.rs  mod.rs
src/utils/: config.rs  date_util.rs  mod.rs  nacos_config.rs
