[package]
name = "rig-mcp-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
chrono = "0.4.41"
dotenv = "0.15.0"
mcp-core = { version = "0.1.42", features = ["sse"] }
mcp-core-macros = "0.1.11"
nacos-sdk = { version = "0.5", features = ["default"] }
once_cell = "1.21.3"
#rig-alias = { version = "0.1.0", package = "rig" }
rig-core = { version = "0.11.0", features = ["mcp"] }
schemars = "0.8.22"
serde = "1.0.219"
serde_json = "1.0.140"
serde_yaml = "0.9.34"
tokio = { version = "1.44.2", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
mysql = "24.0.0"
redis = "0.24.0"
url = "2.5.4"
percent-encoding = "2.3.1"
elasticsearch = { version = "8.18.0-alpha.1", package = "elasticsearch" }
reqwest = { version = "0.11", features = ["json"] }
base64 = "0.21.7"
